Handling of margin/padding changes for different scenarios, expand the sample project

--- a/core/src/main/res/values/styles.xml
+++ b/core/src/main/res/values/styles.xml
@@ -38,7 +38,6 @@
     <item name="android:layout_width">match_parent</item>
     <item name="android:layout_height">wrap_content</item>
     <item name="android:orientation">vertical</item>
-    <item name="android:paddingTop">@dimen/md_dialog_frame_margin</item>
   </style>
 
   <style name="MD_Dialog_Title">
@@ -79,6 +78,27 @@
     <item name="android:paddingStart">@dimen/md_action_button_padding_horizontal</item>
     <item name="android:paddingEnd">@dimen/md_action_button_padding_horizontal</item>
     <item name="android:textColor">?colorAccent</item>
+  </style>
+
+  <style name="MD_ListItem">
+    <item name="android:layout_width">match_parent</item>
+    <item name="android:layout_height">wrap_content</item>
+    <item name="android:focusable">true</item>
+    <item name="android:clickable">true</item>
+    <item name="android:gravity">center_vertical|start</item>
+    <item name="android:minHeight">@dimen/md_listitem_height</item>
+    <item name="android:orientation">vertical</item>
+  </style>
+
+  <style name="MD_ListItemText">
+    <item name="android:layout_width">match_parent</item>
+    <item name="android:layout_height">wrap_content</item>
+    <item name="android:gravity">center_vertical|start</item>
+    <item name="android:layout_marginTop">@dimen/md_listitem_vertical_margin</item>
+    <item name="android:layout_marginBottom">@dimen/md_listitem_vertical_margin</item>
+    <item name="android:layout_marginStart">@dimen/md_listitem_margin_left</item>
+    <item name="android:layout_marginEnd">@dimen/md_dialog_frame_margin</item>
+    <item name="android:textSize">@dimen/md_listitem_textsize</item>
   </style>
 
 </resources>
