--- a/core/src/main/res/values/styles.xml
+++ b/core/src/main/res/values/styles.xml
@@ -40,15 +40,29 @@
     <item name="android:orientation">vertical</item>
   </style>
 
-  <style name="MD_Dialog_Title">
+  <style name="MD_Dialog_Title_Frame">
     <item name="android:layout_width">match_parent</item>
     <item name="android:layout_height">wrap_content</item>
-    <item name="android:layout_marginLeft">@dimen/md_dialog_frame_margin</item>
-    <item name="android:layout_marginRight">@dimen/md_dialog_frame_margin</item>
-    <item name="android:layout_marginBottom">@dimen/md_dialog_frame_margin</item>
+    <item name="android:paddingStart">@dimen/md_dialog_frame_margin</item>
+    <item name="android:paddingEnd">@dimen/md_dialog_frame_margin</item>
+    <item name="android:paddingBottom">@dimen/md_dialog_frame_margin</item>
+    <item name="android:visibility">gone</item>
+  </style>
+
+  <style name="MD_Dialog_Title_Icon">
+    <item name="android:layout_width">wrap_content</item>
+    <item name="android:layout_height">wrap_content</item>
+    <item name="android:layout_marginEnd">@dimen/md_icon_margin</item>
+    <item name="android:visibility">gone</item>
+  </style>
+
+  <style name="MD_Dialog_Title_Text">
+    <item name="android:layout_width">wrap_content</item>
+    <item name="android:layout_height">wrap_content</item>
     <item name="android:textColor">?android:textColorPrimary</item>
     <item name="android:textSize">@dimen/md_title_textsize</item>
     <item name="android:fontFamily">sans-serif-medium</item>
+    <item name="android:visibility">gone</item>
   </style>
 
   <style name="MD_Dialog_Message">
@@ -91,14 +105,49 @@
   </style>
 
   <style name="MD_ListItemText">
-    <item name="android:layout_width">match_parent</item>
+    <item name="android:layout_width">wrap_content</item>
     <item name="android:layout_height">wrap_content</item>
-    <item name="android:gravity">center_vertical|start</item>
+    <item name="android:gravity">start|center_vertical</item>
+    <item name="android:layout_gravity">center_vertical</item>
     <item name="android:layout_marginTop">@dimen/md_listitem_vertical_margin</item>
     <item name="android:layout_marginBottom">@dimen/md_listitem_vertical_margin</item>
     <item name="android:layout_marginStart">@dimen/md_listitem_margin_left</item>
     <item name="android:layout_marginEnd">@dimen/md_dialog_frame_margin</item>
     <item name="android:textSize">@dimen/md_listitem_textsize</item>
+  </style>
+
+  <style name="MD_ListItem.Choice">
+    <item name="android:background">?selectableItemBackground</item>
+    <item name="android:descendantFocusability">blocksDescendants</item>
+    <item name="android:focusable">true</item>
+    <item name="android:minHeight">@dimen/md_listitem_height</item>
+    <item name="android:orientation">horizontal</item>
+    <item name="android:paddingEnd">@dimen/md_dialog_frame_margin</item>
+    <item name="android:paddingStart">@dimen/md_dialog_frame_margin</item>
+  </style>
+
+  <style name="MD_ListItem_Control">
+    <item name="android:layout_width">wrap_content</item>
+    <item name="android:layout_height">wrap_content</item>
+    <item name="android:background">@null</item>
+    <item name="android:clickable">false</item>
+    <item name="android:focusable">false</item>
+    <item name="android:gravity">start|center_vertical</item>
+    <item name="android:layout_gravity">center_vertical</item>
+  </style>
+
+  <style name="MD_ListItemText.Choice">
+    <item name="android:layout_width">wrap_content</item>
+    <item name="android:layout_height">wrap_content</item>
+    <item name="android:gravity">start|center_vertical</item>
+    <item name="android:layout_gravity">center_vertical</item>
+    <item name="android:minHeight">@dimen/md_listitem_height</item>
+    <item name="android:paddingBottom">@dimen/md_listitem_vertical_margin_choice</item>
+    <item name="android:paddingStart">@dimen/md_listitem_control_margin</item>
+    <item name="android:paddingTop">@dimen/md_listitem_vertical_margin_choice</item>
+    <item name="android:textSize">@dimen/md_listitem_textsize</item>
+    <item name="android:layout_marginTop">0dp</item>
+    <item name="android:layout_marginBottom">0dp</item>
   </style>
 
 </resources>
