--- a/sample/src/main/res/layout/activity_main.xml
+++ b/sample/src/main/res/layout/activity_main.xml
@@ -267,6 +267,14 @@
         />
 
     <Button
+        android:id="@+id/single_choice_buttons"
+        android:layout_width="match_parent"
+        android:layout_height="@dimen/sample_button_height"
+        android:layout_marginTop="@dimen/sample_button_spacing"
+        android:text="Single Choice + Buttons"
+        />
+
+    <Button
         android:id="@+id/single_choice_long_items"
         android:layout_width="match_parent"
         android:layout_height="@dimen/sample_button_height"
